--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,48 @@ img {
   height: auto;
 }
 
-header {
+/* header {
   background-color: #444;
-  height: 100px;
+  height: 75px;
+} */
+
+p {
+  line-height: 1.25em;
+  text-align: justify;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 ul {
 list-style: circle;
 }
+
+h1 {
+  text-align:center;
+  font-size:200%;
+  padding-top: 15px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+
+article  {
+  width:  50%;
+  /* margin-left: auto;
+  margin-right: auto; */
+  position: relative;
+  left: 625px;
+  top: -250px;
+  padding-top: 10px;
+  <img src="img/frosted-cookie.jpg" alt="cookie">
+}
+
+/* ul {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding : 0;
+} */
